@@ -650,14 +650,19 @@ var omnivaltDelivery = {
         $('.delivery-options .delivery-option input[type="radio"], input.delivery_option_radio').each(function() {
             var $this = $(this),
                 value = $this.val(),
-                carrierIds = value.split(',');
+                carrierIds = value.split(','),
+                moveTo;
             if (value != omnivalt_params.methods.omniva_terminal + ',') {
                 return;
             }
             if($this[0].classList.contains('delivery_option_radio'))
             {
                 console.log('Block add method: Radio');
-                var moveTo = $this.closest('.delivery_option').find('.delivery_option_logo').next();
+                if (!omnivalt_params.prestashop.is_16 && typeof OPC !== typeof undefined) { /* onepagecheckoutps v5 - 4.2.3 - presteamshop */
+                    moveTo = $this.closest('.delivery-option').find('.delivery_option_logo').next();
+                } else {
+                    moveTo = $this.closest('.delivery_option').find('.delivery_option_logo').next();
+                }
                 $("#hook-display-before-carrier #omnivalt_parcel_terminal_carrier_details").appendTo('#omnivalt_parcel_terminal_carrier_details');
                 $('#omnivalt_parcel_terminal_carrier_details').appendTo(moveTo);
             }
@@ -665,7 +670,7 @@ var omnivaltDelivery = {
             {
                 console.log('Block add method: Label');
                 var omnivaltLocation = $this.closest('.delivery-option').next();
-                var moveTo = $this.closest('.delivery-option').find('label');
+                moveTo = $this.closest('.delivery-option').find('label');
                 $("#hook-display-before-carrier #omnivalt_parcel_terminal_carrier_details").appendTo(omnivaltLocation);
                 omnivaltLocation.find('#omnivalt_parcel_terminal_carrier_details').appendTo(moveTo);
             }
@@ -703,6 +708,13 @@ var omnivaltDelivery = {
                     {
                         //console.log(jsonData);
                         console.log('Terminal saved successfully');
+
+                        /* onepagecheckoutps - v4.2.3 - presteamshop */
+                        if (!omnivalt_params.prestashop.is_16 && typeof OPC !== typeof undefined) {
+                            if ($('#btn-placer_order').is(':disabled')) {
+                                prestashop.emit('opc-payment-getPaymentList');
+                            }
+                        }
                     },
                     error: function(XMLHttpRequest, textStatus, errorThrown) {
                         console.log('Failed terminal save');
@@ -779,9 +791,15 @@ var omnivaltDelivery = {
 }
 	
 //when document is loaded...
-$(document).ready(function(){
-    launch_omniva();
-});
+if (!omnivalt_params.prestashop.is_16 && typeof OPC !== typeof undefined) { /* onepagecheckoutps v5 - 4.2.3 - presteamshop */
+    prestashop.on('opc-shipping-getCarrierList-complete', () => {
+        launch_omniva();
+    });
+} else {
+    $(document).ready(function(){
+        launch_omniva();
+    });
+}
 
 function launch_omniva(retry = 0) {
     console.log('OMNIVA:', 'Loading map... Retry ' + retry);
